{
    "name": "GameInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "fe2dc6b7-68ff-4818-b247-16dac6f527b4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f2710328-bea5-41b7-b655-02b9b1565f15",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Acceleration",
                    "type": "Button",
                    "id": "3b692505-6385-4eb3-ad36-95e4d3290c35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "178417e7-5d5a-4858-ab9b-0d5e4bac7731",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "d4b4998c-6933-4565-a602-7132d6a29051",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4fbea709-39d8-454c-8cc6-b5eafeb15042",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bc4112b3-0141-4d55-b81f-d4b6b89322b9",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "7543b2be-a93f-4b78-9e32-536c88d160e4",
            "actions": [],
            "bindings": []
        },
        {
            "name": "Camera",
            "id": "68b9b0ce-fd24-414c-9a1c-7f7754be5c97",
            "actions": [
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "44049cbe-7abe-4bca-a0fa-a2aef0550f46",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "b766d7df-2e2f-4320-bd4f-00e9179c13e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "790034b8-5f25-407e-a237-db27d2b6c5c9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c60f1b0-02db-49ba-992d-6481e34816f9",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e11e2ac-9030-40c5-9916-1d29e3a887cc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22ef75eb-cedc-43d9-8f16-d17642eb32ca",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52045b70-f4c1-45d4-8bf4-27393c68ac3b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}